# csp-billing-adapter-amazon

./: CHANGES.md  MANIFEST.in  README.md  csp-billing-adapter-amazon.spec  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-workflow.yml
csp_billing_adapter_amazon/: plugin  plugin.py
tests/data/: good_config.yaml
tests/unit/: test_plugin.py
