[bumpversion]
current_version = 0.5.1
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:csp_billing_adapter_amazon/__init__.py]

[bumpversion:file:csp-billing-adapter-amazon.spec]

[tool:pytest]
testpaths = tests
norecursedirs = data

[coverage:report]
fail_under = 90

[metadata]
license_file = LICENSE
